fix typo in conc parameter explanation

--- a/DIGI405 - Lab 2.3 - Keywords.ipynb
+++ b/DIGI405 - Lab 2.3 - Keywords.ipynb
@@ -473,7 +473,7 @@
     "There are two key ways to filter results:\n",
     "\n",
     "* Use a `statistical_significance_cut`: Choose a p value to remove keywords based on statistical significance (you can be aggressive with this). In addition, we can impose a stricter test that takes into account the number of tests being conducted using the [Bonferonni correction](https://en.wikipedia.org/wiki/Bonferroni_correction).  \n",
-    "* Use frequency filtering: Conc supports the `min_frequency` and `max_frequency_reference` parameters to filter keywords based on their frequencies in the target and reference corpora, as well as `min_document_frequency` and `min_document_frequency_reference` to filter keywords based on the number of documents they appear in.\n",
+    "* Use frequency filtering: Conc supports the `min_frequency` and `min_frequency_reference` parameters to filter keywords based on their frequencies in the target and reference corpora, as well as `min_document_frequency` and `min_document_frequency_reference` to filter keywords based on the number of documents they appear in.\n",
     "\n",
     "The `show_document_frequency` parameter has been added so that we can look at the dispersion of keywords across documents. \n",
     "\n",
